--- a/index.html
+++ b/index.html
@@ -7,10 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:wght@300;400;700;800&display=swap"
+          rel="stylesheet">
+
     <link rel="stylesheet" href="./src/css/normalize.css">
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
+
+<div class="box intro">
+    <div class="intro__mask">
+        <header class="header">
+            <div class="header__wrapper">
+                <a href="" class="logo__text">BestShop</a>
+                <nav class="mainMenu">
+                    <a href="" class="mainMenu__item mainMenu__item--active">Why us</a>
+                    <a href="" class="mainMenu__item">Benefits</a>
+                    <a href="" class="mainMenu__item">Prices</a>
+                    <a href="" class="mainMenu__item">Contact</a>
+                </nav>
+            </div>
+
+        </header>
+            <section class="box__wrapper hero">
+                <h1 class="hero__hdl">Sell More!</h1>
+                <p class="hero__lead">Open shop on our platform and increase your sales</p>
+                <div class="hero__box">
+                    <a href="" class="hero__link btn btn-lg btn-primary">Open your shop</a>
+                </div>
+                <div class="bgc__intro"></div>
+            </section>
+
+    </div>
+
+</div>
 
 </body>
 </html>
