--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="header__wrapper">
                 <a href="" class="logo__text">BestShop</a>
                 <nav class="mainMenu">
-                    <a href="" class="mainMenu__item mainMenu__item--active">Why us</a>
-                    <a href="" class="mainMenu__item">Benefits</a>
-                    <a href="" class="mainMenu__item">Prices</a>
-                    <a href="" class="mainMenu__item">Contact</a>
+                    <a href="#analisys" class="mainMenu__item mainMenu__item--active">Why us</a>
+                    <a href="#benefits" class="mainMenu__item">Benefits</a>
+                    <a href="#prices" class="mainMenu__item">Prices</a>
+                    <a href="#contact" class="mainMenu__item">Contact</a>
                 </nav>
             </div>
 
@@ -39,9 +39,30 @@
                 </div>
                 <div class="bgc__intro"></div>
             </section>
-
     </div>
+</div>
 
+<div class="box" id="analisys">
+    <div class="box__wrapper analysis">
+        <h2 class="analysis__hdl">The most popular sales platform in country</h2>
+        <section class="analysis__box">
+            <div class="analysis__col ">
+                <img src="./src/img/Person.svg" alt="" class="analysis__img col1">
+                <h3 class="analysis__title">100000+</h3>
+                <p class="analysis__text">daily entries</p>
+            </div>
+            <div class="analysis__col">
+                <img src="./src/img/Eye.svg" alt="" class="analysis__img col2">
+                <h3 class="analysis__title">2000000+</h3>
+                <p class="analysis__text">seen products every day</p>
+            </div>
+            <div class="analysis__col">
+                <img src="./src/img/Catalog.svg" alt="" class="analysis__img col3">
+                <h3 class="analysis__title">10000+</h3>
+                <p class="analysis__text">added posts</p>
+            </div>
+        </section>
+    </div>
 </div>
 
 </body>
